--- a/volunteer.html
+++ b/volunteer.html
@@ -51,21 +51,33 @@
   <div class ="col-md-4"> 
     <img src="img/volunteer/1.png" class="img-fluid float-start" alt="100x100" >
   </div>
-  <div class="col-md-4 text-center pt-5">
+
+  <!-- <div class="col-md-4 text-center pt-5">
     <h1> Volunteer </h1>
     <h5>What to Expect : Frequently Asked Questions</h5>
     <a href="readmore.html">
       <img src="img/volunteer/FAQ.png" class="img-fluid rounded-start" height="350px" width="350px">   
     </a>
-  </div>
-  <div class="col-md-4">
-    <img src="img/volunteer/2.png" class="img-fluid float-end" alt="100x100">
+  </div>  -->
+
+<div class="col-md-4 text-center" >
+  <h1> Volunteer </h1>
+    <h5>What to Expect : Frequently Asked Questions</h5>
+<div class="promo" style="--overlay-color: #C2A35E">
+  <!-- <div class="image-wrapper"><img src=img/volunteer/FAQ3.jpg alt="Logo"></div> -->
+  <a href="readmore.html"><div class="image-wrapper"><img src=img/volunteer/FAQ4.jpg alt="Logo"></div>
+  <h2 class="title" data-cta="Click to go there →"></h2></a>
+</div>
+</div>
+
+<div class="col-md-4" >
+  <img src="img/volunteer/2.png" class="img-fluid float-end" alt="100x100">
   </div>
 </div>
 
 <div class="container pt-5">
   <h1 class="text-center"> About Volunteering</h1>
-  <p class="pt-3">It starts with you.  By deciding to participate in a clinical trial you are playing a vital role in getting drugs to market that may be able to help you, your loved ones and even people you don't know around the world. To all of our past participants we thank you.  If you are thinking about it, come experience Pharma Medica Research Inc.</p>
+  <p class="pt-3">It starts with you.  By deciding to participate in a clinical trial you are playing a vital role in getting drugs to market that may be able to help you, your loved ones and even people you don't know around the world. To all of our past participants we thank you. If you are thinking about it, come experience Pharma Medica Research Inc.</p>
 </div>
 
 <!-- <div class="container">
@@ -95,11 +107,11 @@
     </div>
   </div>
 
-<!-- Scroll UP Button
+<!--  Scroll UP Button -->
 
 <button type="button" class="btn btn-success btn-floating btn-lg" id="btn-back-to-top">
   <i class="fa fa-arrow-up"></i>
-</button> -->
+</button>
 
 <!-- <div class="container pt-5">
   <div class="col-md-5 mx-auto">
@@ -152,10 +164,10 @@
 
         <div class="col-md-3">
           <div class="cir">
-            <div class="animated-circle arrow"></div><img src="img/screened.png" alt="Avatar" class="image">
+            <div class="animated-circle arrow"></div><img src="img/screened.png" alt="Avatar" class="image"><div class="center">Get Screened</div>
 
             <div class="ciroverlay">
-              <div class="text">Get Screened
+              <div class="block"> <p>Joining a study starts with a quick phone call with us. We’ll ask you a few questions, and if there’s a study that might be a good fit, we’ll move into the next phase </p>
               </div>
             </div>
           </div>
@@ -164,9 +176,9 @@
         <div class="col-md-3">
           <div class="cir">
 
-            <div class="animated-circle arrow"></div><img src="img/health.png" alt="Avatar" class="image"> 
+            <div class="animated-circle arrow"></div><img src="img/health.png" alt="Avatar" class="image"><div class="center">Take a Health Assesment</div> 
             <div class="ciroverlay">
-              <div class="text"> Take a Health Assesment
+              <div class="block"><p>After you’ve been screened, you’ll come to our research facility for a complimentary physical assessment, and to discuss any questions you might have.</p>
               </div>
             </div>
           </div>
@@ -174,9 +186,9 @@
 
         <div class="col-md-3">
           <div class="cir">
-            <div class="animated-circle arrow"></div><img src="img/participate.png" alt="Avatar" class="image">
+            <div class="animated-circle arrow"></div><img src="img/participate.png" alt="Avatar" class="image"><div class="center">Participate</div> 
             <div class="ciroverlay">
-              <div class="text"> Participate
+              <div class="block"><p>Once you're approved as a candidate and if you’re happy with the study conditions, your participation in the clinical research study will begin.</p>
               </div>
             </div>
           </div>
@@ -184,9 +196,9 @@
 
         <div class="col-md-3">
           <div class="cir">
-            <img src="img/medicine.png" alt="Avatar" class="image">
+            <img src="img/medicine.png" alt="Avatar" class="image"><div class="center">Help Advanced Medicine</div>
             <div class="ciroverlay">
-              <div class="text"> Help Advanced Medicine
+              <div class="block"><p>When you participate in a clinical study, you help make medical advances possible, giving hope to countless people all over the world.</p> 
               </div>
             </div>
           </div>
