--- a/bioanalytical.html
+++ b/bioanalytical.html
@@ -134,7 +134,7 @@
 		<div class="col-md-8 mb-4 my-5">
 			<h2 class="text-start"> Bioanalysis </h2>
 			<div class="service pt-3"> 
-				<p>“Small and large molecules, tissues, ultra sensitive, biomarkers, endogenous (hormones, vitamins, lipids (omega-3 acids), oglionucleotides, analysis from microsampling devices (VAMS, TASSO)?, Highly Experienced Laboratory Management30+ years leading bioanalytical labs Topic Leader for ICH M10Active member of Global CRO Council (GCC)Challenging and complex methods & analysisUltra sensitive assays (0.1 pg/mL)Cannabis licensed by Government of Canada, ANVISAList API 4000, 5000, 6500 and High-Resolution MS?Rapid analysis (FTF) within days?WHERE IS THE LINK TO OUR LIST</p> 
+				<p>Our state-of-the-art bioanalytical facility offers 24 LC/MS/MS instruments with various platforms.  Over 500 off-the-shelf fully validated assays are ready for you in various matrix. Do you have a challenging and complex molecule?  Just ask. Custom assay development & validation is at the core of our service offering.</p> 
 			</div>
 		</div>
 		<!--Grid column-->
@@ -160,7 +160,9 @@
 		<div class="col-md-8 mb-4 my-5">
 			<h2 class="text-start"> Non-Clinical Sample Analysis</h2>
 			<div class="service pt-3"> 
-				<p>“Using the same method through all stages - explain how changin can introduce variability.List them (rat, mouse, dog, cat, money)??Extraction and analysis of products in for in-vitro studies (saline, human tissue)??” lLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+				<p>We are GLP Certified by the Standard Council of Canada (SCC) and offer analysis of PK and Tox samples from varoius sources of matrix. Using the same method through all stages - explain how changin can introduce variability.
+List them (rat, mouse, dog, cat, money)??
+Extraction and analysis of products in for in-vitro studies (saline, human tissue)?? </p>
 			</div>
 		</div>
 		<!--Grid column-->
@@ -177,7 +179,7 @@
 		<div class="col-md-8 mb-4 my-5">
 			<h2 class="text-start"> Organic Synthesis</h2>
 			<div class="service pt-3"> 
-				<p>“The size of the department, the team, benefits with quality, CoA for outside purchased….Stable-labelled internal standards Mention custom molecule synthesis or list them?” Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p> 
+				<p>The size of the department, the team, benefits with quality, CoA for outside purchased….Stable-labelled internal standards Mention custom molecule synthesis or list them? We synthesize quality deuterated internal standards and metabolites in-house! This non-standard CRO approach offers the advantage of ? </p> 
 			</div>
 		</div>
 		<!--Grid column-->
