--- a/biometrics.html
+++ b/biometrics.html
@@ -100,7 +100,7 @@
   </div>
 </div>
 
-<!-- BE/BA -->
+<!-- Biostats -->
 
 <div class="container">
   <!--Grid row-->
@@ -113,10 +113,15 @@
     <!--Grid column-->
     <div class="col-md-8 mb-4 my-5">
 
-      <h2 class="text-start">BE/BA</h2>
+      <h2 class="text-start">Biostats </h2>
 
       <div class="service pt-3"> 
-        <p>We know that in order to show that two drugs are bioequivalent, we need to prove there is no clinically significant difference in their bioavailability so standardizing the conduct is key. Intra and Inter subject variability is the basic concept and this is our focus to increase the probability of success. Having 360 beds under one roof allows us to not only dose very large groups and closer together to decrease “group effects” but also offer long confinement for months when necessary.</p></div>
+        <p>Development of Statistical Analysis Plan (SAP)
+– Calculation of sample size & power
+– Generation of randomization
+– Statistical modeling and simulation
+– Safety & efficacy analysis and reporting
+(analysis includes but not limited to PK/PD/PopPK, Clinical Endpoint, Clinical Safety, Exploratory, Interim, Meta-analysis, Integrated summary of safety/efficacy (ISS/ISE))</p></div>
       </div>
 
       <!--<div id="info">  
@@ -132,15 +137,18 @@
   <!--Grid row-->
 </div> 
 
-<!-- PK/PD -->
+<!-- Clinical Data Management -->
 <div class="container">
   <!--Grid row-->
   <div class="row text-center mx-auto">
     <!--Grid column-->
     <div class="col-md-8 mb-4 my-5">
-      <h2 class="text-start"> PK/PD</h2>
+      <h2 class="text-start"> Clinical Data Management</h2>
       <div class="service pt-3"> 
-        <p>Full panel all the time! From healthy volunteer subjects, special populations such as pre or post menopausal women or patients we are here for you. Being located in the Greater Toronto Area, gives us access to a diverse population which is what Regulators look for in clinical trials. We draw from our active database which boasts over X volunteers in addition to reaching out by various advertising medians. We also have a very effective referral program - participants love the safe and comfortable environment offered at PMRI and spread the word. We are also enrolled in clinical RSVP which securely and confidentially validates subjects eligibility prior to enrollment by using biometrics. The goal is prevent dual enrollment which leads to increased accuracy of clinical study data and improves the participant’s safety.</p></div>
+        <p>The full service from study start-up to close-out is conducted in-house.  We use a validated 21 CFR Part 11 compliant Electronic Data Capture (EDC) software TrialBuilder®/TrialExplorer® which is the most intuitive EDC suite on the market.  A Data Management Plan (DMP), eCRF design, MedDRA coding, data entry, edit checks data validation, dataset generation according to FDA's Data Standards Catalog (SDTM ADaM and Define.xml) are all included.
+annotated eCRs?
+
+We are an offical member of the Clinical Data Interchange Standards Consortium (CDISC) and our certified study data mangers, having experience accross multiple therapeutic areas,  will ensure the output (TFLs??) will be aligned??.  Consider us as part of a clinical trial, fthroughout your full clinic program at any phase or as a stand alone service for your next NDA, ANDA or Hybrid submission.</p></div>
       </div>
       <!--Grid column-->
       <!--Grid column-->
@@ -151,29 +159,7 @@
     </div>
   </div>
 
-  <!-- Subject Selection -->
 
-  <div class="container">
-    <!--Grid row-->
-    <div class="row text-center mx-auto">
-      <!--Grid column-->
-      <div class="col-md-4 mb-4">
-        <img class="img-fluid my-5" alt="100x100" src="img/Service/be-ba.png" data-holder-rendered="true">
-      </div>
-      <!--Grid column-->
-      <!--Grid column-->
-      <div class="col-md-8 mb-4 my-5">
-
-        <h2 class="text-start"> Specialized Studies </h2>
-
-        <div class="service pt-3"> 
-          <p>“Contamination! To us clinical trials are very routine and with all studies we ensure that measures are in place to address factors which may jeopardize the outcome. Our experiences goes way beyond the standard solid oral dosage form and includes but not limited to solutions, films, injectable products, ophthalmic, vaginal and rectal administration. But there are a few others with very specific considerations which are drug products for respiratory and topical. Metered Dose Inhalers (MDI), Dry Powder Inhalers (DPI), Nasal Sprays, Nebulizers, Patches, Ointments and Creams are special. Through our experience we have identified what challenges can arise and have implemented special considerations, specifically to address the high risk of potential contamination as well to address the issue of low systemic absorption. Our expertise, experience, thorough procedures, staff training and infrastructure are key factors to the success the studies we conduct. Our process are proven effective!</p>
-        </div>
-      </div>
-      <!--Grid column-->
-    </div>
-    <!--Grid row-->
-  </div>
 
   <!-- Newsletter --> 
 
@@ -190,6 +176,7 @@
 class="text-center text-lg-start text-green">
 
 <!-- Section: Links -->
+  <!--Grid row-->
   <div class="row">
     <!-- Grid column -->
     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
@@ -273,6 +260,7 @@ class="text-center text-lg-start text-green">
           </div>
         </div>
         <!--Grid row-->
+      
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2021,<a class="text-black" href="#">Pharma Medica Research Inc.</a> All rights reserved.
     </div>
