--- a/clinical.html
+++ b/clinical.html
@@ -135,7 +135,7 @@
       <div class="service pt-3"> 
         <p> <!-- <iframe src="Subjectselection.html" frameborder="0" height="100%" width="100%"></iframe> -->
 
-          Full panel all the time! From healthy volunteer subjects, special populations such as pre or post menopausal women or patients we are here for you. Being located in the Greater Toronto Area, gives us access to a diverse population which is what Regulators look for in clinical trials. We draw from our active database which boasts over X volunteers in addition to reaching out by various advertising medians. We also have a very effective referral program - participants love the safe and comfortable environment offered at  </p></div>
+          Full panel all the time! From healthy volunteer subjects, special populations such as pre or post menopausal women or patients we are here for you. Being located in the Greater Toronto Area, gives us access to a diverse population which is what Regulators look for in clinical trials. We draw from our active database which boasts over X volunteers in addition to reaching out by various advertising medians. We also have a very effective referral program - participants love the safe and comfortable environment offered at PMRI and spread the word.  </p></div>
       </div>
       <!--Grid column-->
       <!--Grid column-->
