--- a/scientificaffairs.html
+++ b/scientificaffairs.html
@@ -112,10 +112,14 @@
     <div class="col-md-8 mb-4 my-5">
       <h2 class="text-start"> Biometrics</h2>
       <div class="service pt-3"> 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. It goes without saying - reliable data is a key factor for the assessment and reporting of clinical trials. Count on us.
+        <p>It goes without saying - reliable data is a key factor for the assessment and reporting of clinical trials. Count on us. Statistical Programing
+– Development of CDISC SDTM and ADaM (or Sponsor defined) submission-ready datasets, define.xml, reviewer’s guides
+– Generation of tables, listings and figures (TLFs)
+– Data validation & data fitness assessment
+
         </p>
       </div>
-      <div class="text-start pt-4"><a href="clinical-expertise.html" class="btn btn-success" >Learn More</a> </div>
+      <div class="text-start pt-4"><a href="biometrics.html" class="btn btn-success" >Learn More</a> </div>
     </div>
     <!--Grid column-->
   </div>
@@ -131,7 +135,11 @@
     <div class="col-md-8 mb-4 my-5">
       <h2 class="text-start"> Medical Writing </h2>
       <div class="service pt-3"> 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary,</p></div>
+        <p>Medical Writing, is a standalone service that can be utilized for the studies conducted at PMRI.  We offer in-house professional CRAs with extensive knowledge of ICH-GCP combined with thorough training on our internal procedures and forms. This unique approach to study monitoring improves quality and efficiency.
+ Reliability - no risk of late or cancelled flights
+ Efficiency – our CRAs are “PMRI” experts
+ No surprises – PMRI’s “all inclusive” model
+Our approach has been approved by regulatory by Health Canada, FDA and EMA.  The reporting structure and organization of Clinical Trial Monitoring within PMRI was specifically established to comply with GCP-ICH and the expectations of regulatory agencies.  </p></div>
       </div>
       <!--Grid column-->
       <!--Grid column-->
@@ -156,7 +164,7 @@
     <div class="col-md-8 mb-4 my-5">
       <h2 class="text-start"> Clinical Pharmacology </h2>
       <div class="service pt-3"> 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary,</p></div>
+        <p>How much data we have, how we can give low doses and get good PK. PP-PD modeling, Phoenix WinNonlin, NLME, NONMEMScientific Affairs overviewAs a client you have open access to consultation with our scientific affairs team for planning, technical support and our unique insight. Our team is prepared to work closely with you during protocol & Informed Consent development and finalization right though to issuance of your final report (or CSR). We will provide our scientific expertise and make suggestions for your considerations so that you can obtain the optimal study protocol to balance the chance of success while respecting your R&D budgets. Comprehensive support to help navigate from pre-clinical to regulatory submission including:Pre-IND meeting guidance and supportFull Clinical Data Management to cover entire program.</p></div>
       </div>
     </div>
   </div>
