--- a/volunteer.html
+++ b/volunteer.html
@@ -103,7 +103,7 @@
   <div class="row justify-content-center bg-green">
     <div class="col-md-6 px-5 text-center">      
       <div class="d-block mt-3"><h3 class="text-white">Do you want to participate in Clinical Trial?  </h3></div> 
-      <a class="btn btn-secondary m-3" href="study.html" >Discover</a>  
+      <a class="btn btn-secondary m-3" href="readmore.html" >Discover</a>  
     </div>
   </div>
 
@@ -233,7 +233,7 @@
   <div class="container reveal">
     <div class="row g-0">
     <div class="col-md-3">
-      <img src="img/volunteer/referfriend.png" class="img-fluid rounded-start" alt="Card-1">
+    <img src="img/volunteer/referfriend.png" class="img-fluid rounded-start" alt="Card-1">
   </div>
     <div class="col-md-9">
         <h2>Refer A Friend</h2>
@@ -256,7 +256,7 @@
     <h2>Privacy</h2>
     <div class="text-container">
         <p>
-         We are a Contract Research Organization (CRO) and work with clinical trial Sponsors from around the world.    We have been operating in Scarborough since 1997 and are established within our community.  Our focus is your health and safety, and our highly trained and qualified staff will be with you every step of the way.  Our state-of-the-art facility offers a comfortable environment with great amenities.  Check us out.
+         We are a Contract Research Organization (CRO) and work with clinical trial Sponsors from around the world.    We have been operating in Scarborough since 1997 and are established within our community.  Our focus is your health and safety, and our highly trained and qualified staff will be with you every step of the way.  Our state-of-the-art facility offers a comfortable environment with great amenities. Check us out.
         </p></div>
       </div>
     <div class="col-md-3 px-5">
