--- a/readmore.html
+++ b/readmore.html
@@ -80,14 +80,12 @@
           <a href="volunteer.html" class="btn btn-success" >Volunteers</a>
         </li>
       </ul>
-
     </div>
   </div>
 </nav>
 </div>
 </div>
 </div>
-
 
 <div class="container row text-center mx-auto p-5">
  
@@ -437,29 +435,36 @@ Most studies involve between 2 and 4 overnight stays in the clinic. Please refer
      </div>
    </div>
  </div>
-
-
 </div>
-  </p>
+</p>
+</div>
 </div>
 
-</div>
+<div class="container px-5"> 
+    <div class="row g-0 px-5 ">
+      <div class="col-md-6 text-center py-4" > 
+        <a class=" btn btn-xl btn-block mybtn" href="https://www.epmri.com/">LOGIN  <i class="fa fa-sign-in" aria-hidden="true"></i></a>
+      </div>
+      <div class="col-md-6 text-center py-4">
+        <a class=" btn btn-xl btn-block mybtn" href="https://www.epmri.com/signup">SIGN UP  <i class="fa fa-user-plus" aria-hidden="true"></i></a>
+      </div>
+    </div>  
+  </div>
 
 
 <div class="row justify-content-center bg-green align-items-center">
-      <div class="col-md-6 px-5 text-center">      
-          <span class="d-block mt-3"><h3 class="text-white">Stay Informed!!  <br> Sign Up for news letter </h3></span> 
-          <div class="input-group mb-4 mt-4"> <input type="text" class="form-control" placeholder="Enter email" aria-label="Recipient's username" aria-describedby="button-addon2"> <button class="btn btn-success border-rad" type="button" id="button-addon2">Subscribe</button> </div>
-        </div>
-      </div>
+  <div class="col-md-6 px-5 text-center">      
+    <span class="d-block mt-3"><h3 class="text-white">Stay Informed!!  <br> Sign Up for news letter </h3></span> 
+    <div class="input-group mb-4 mt-4"> <input type="text" class="form-control" placeholder="Enter email" aria-label="Recipient's username" aria-describedby="button-addon2"> <button class="btn btn-success border-rad" type="button" id="button-addon2">Subscribe</button> 
+    </div>
+  </div>
+</div>
+
 
 <!-- Footer --> 
-
 <footer
 class="text-center text-lg-start text-green">
 
-<!-- Section: Links -->
-<section class="">
   <!--Grid row-->
   <div class="row">
     <!-- Grid column -->
@@ -544,8 +549,7 @@ class="text-center text-lg-start text-green">
           </div>
         </div>
         <!--Grid row-->
-      </section>
-      <!-- Section: Links -->
+
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2021,<a class="text-black" href="#">Pharma Medica Research Inc.</a> All rights reserved.
     </div>
