--- a/scientificaffairs.html
+++ b/scientificaffairs.html
@@ -105,7 +105,7 @@
   <div class="row text-center mx-auto">
     <!--Grid column-->
     <div class="col-md-4 mb-4">
-      <img class="img-fluid my-5" alt="100x100" src="img/scientific Affairs/biometrics.png" data-holder-rendered="true">
+      <img class="img-fluid my-5" alt="100x100" src="img/Scientific Affairs/biometrics.png" data-holder-rendered="true">
     </div>
     <!--Grid column-->
     <!--Grid column-->
@@ -144,7 +144,7 @@ Our approach has been approved by regulatory by Health Canada, FDA and EMA.  The
       <!--Grid column-->
       <!--Grid column-->
       <div class="col-md-4 mb-4">
-        <img class="img-fluid my-5" alt="100x100" src="img/scientific Affairs/medicalwriting.png" data-holder-rendered="true">
+        <img class="img-fluid my-5" alt="100x100" src="img/Scientific Affairs/medicalwriting.png" data-holder-rendered="true">
       </div>
       <!--Grid column-->
     </div>
@@ -159,7 +159,7 @@ Our approach has been approved by regulatory by Health Canada, FDA and EMA.  The
     <!--Grid column-->
      <!--Grid column-->
       <div class="col-md-4 mb-4">
-        <img class="img-fluid my-5" alt="100x100" src="img/scientific Affairs/clinicalpharmacology.png" data-holder-rendered="true">
+        <img class="img-fluid my-5" alt="100x100" src="img/Scientific Affairs/clinicalpharmacology.png" data-holder-rendered="true">
       </div>
     <div class="col-md-8 mb-4 my-5">
       <h2 class="text-start"> Clinical Pharmacology </h2>
