--- a/careers.html
+++ b/careers.html
@@ -89,7 +89,7 @@
   <div class="row">
   <div class="container">
 </div>
-   <img src="img/career/banner.png" class = "img-fluid" alt="Banner" style="width: 100%;">
+   <img src="img/Career/banner.png" class = "img-fluid" alt="Banner" style="width: 100%;">
 </div>
 
 <!-- <div class="page-header-career">
