--- a/volunteer.html
+++ b/volunteer.html
@@ -66,7 +66,7 @@
 <div class="promo" style="--overlay-color: #C2A35E">
   <!-- <div class="image-wrapper"><img src=img/volunteer/FAQ3.jpg alt="Logo"></div> -->
   <a href="readmore.html"><div class="image-wrapper"><img src=img/volunteer/FAQ4.jpg alt="Logo"></div>
-  <h2 class="title" data-cta="Click to go there →"></h2></a>
+  <h2 class="title" data-cta="Click to go FAQ page →"></h2></a>
 </div>
 </div>
 
