--- a/biometrics.html
+++ b/biometrics.html
@@ -116,12 +116,7 @@
       <h2 class="text-start">Biostats </h2>
 
       <div class="service pt-3"> 
-        <p>Development of Statistical Analysis Plan (SAP)
-– Calculation of sample size & power
-– Generation of randomization
-– Statistical modeling and simulation
-– Safety & efficacy analysis and reporting
-(analysis includes but not limited to PK/PD/PopPK, Clinical Endpoint, Clinical Safety, Exploratory, Interim, Meta-analysis, Integrated summary of safety/efficacy (ISS/ISE))</p></div>
+        <p>Our highly skilled Biostatisticians and Clinical SAS Programmers have a wealth of experience in working with the various regulatory requirements. With this experience and knowledge we can offer you a full range of biostatistical and SAS programming services to suit your needs, including but not limited to, CDISC services, Table, Listing, and Figure (TLFs), and statistical analysis. Check below to see what we can do to meet your goals.</p></div>
       </div>
 
       <!--<div id="info">  
@@ -145,10 +140,8 @@
     <div class="col-md-8 mb-4 my-5">
       <h2 class="text-start"> Clinical Data Management</h2>
       <div class="service pt-3"> 
-        <p>The full service from study start-up to close-out is conducted in-house.  We use a validated 21 CFR Part 11 compliant Electronic Data Capture (EDC) software TrialBuilder®/TrialExplorer® which is the most intuitive EDC suite on the market.  A Data Management Plan (DMP), eCRF design, MedDRA coding, data entry, edit checks data validation, dataset generation according to FDA's Data Standards Catalog (SDTM ADaM and Define.xml) are all included.
-annotated eCRs?
-
-We are an offical member of the Clinical Data Interchange Standards Consortium (CDISC) and our certified study data mangers, having experience accross multiple therapeutic areas,  will ensure the output (TFLs??) will be aligned??.  Consider us as part of a clinical trial, fthroughout your full clinic program at any phase or as a stand alone service for your next NDA, ANDA or Hybrid submission.</p></div>
+        <p>From study start-up to database lock, our onsite team of experienced CDM Project Managers and Data Entry personnel are dedicated to providing high-quality deliverables as part of our comprehensive package of CDM services. Our team has extensive experience across multiple therapeutic areas. We are a gold member of the Clinical Data Interchange Standards Consortium (CDISC). Our deliverables follow CDISC and Clinical Data Acquisition Standards Harmonization (CDASH) standards and this will allow you to accelerate your regulatory submission and review process. Whether you require a full CDM package or only data entry services, we will proactively work with you to accommodate your requirements while maintaining the integrity of our proven CDM processes.
+We use TrialMaster, a validated US FDA 21 CFR Part 11 compliant Electronic Data Capture (EDC) suite which is the most intuitive EDC suite on the market. Our vast library of electronic Case Report Form (eCRF) templates, allow for the rapid build and deployment of clinical study databases, and no down time during mid-study changes.</p></div>
       </div>
       <!--Grid column-->
       <!--Grid column-->
