--- a/scientificaffairs.html
+++ b/scientificaffairs.html
@@ -112,10 +112,7 @@
     <div class="col-md-8 mb-4 my-5">
       <h2 class="text-start"> Biometrics</h2>
       <div class="service pt-3"> 
-        <p>It goes without saying - reliable data is a key factor for the assessment and reporting of clinical trials. Count on us. Statistical Programing
-– Development of CDISC SDTM and ADaM (or Sponsor defined) submission-ready datasets, define.xml, reviewer’s guides
-– Generation of tables, listings and figures (TLFs)
-– Data validation & data fitness assessment
+        <p>It goes without saying - reliable data is a key factor for the assessment and reporting of clinical trials. Count on us.
 
         </p>
       </div>
@@ -135,11 +132,7 @@
     <div class="col-md-8 mb-4 my-5">
       <h2 class="text-start"> Medical Writing </h2>
       <div class="service pt-3"> 
-        <p>Medical Writing, is a standalone service that can be utilized for the studies conducted at PMRI.  We offer in-house professional CRAs with extensive knowledge of ICH-GCP combined with thorough training on our internal procedures and forms. This unique approach to study monitoring improves quality and efficiency.
- Reliability - no risk of late or cancelled flights
- Efficiency – our CRAs are “PMRI” experts
- No surprises – PMRI’s “all inclusive” model
-Our approach has been approved by regulatory by Health Canada, FDA and EMA.  The reporting structure and organization of Clinical Trial Monitoring within PMRI was specifically established to comply with GCP-ICH and the expectations of regulatory agencies.  </p></div>
+        <p>Our dedicated and experienced team of writers can provide you with any writing service that you need for your drug development program and ensure that it complies with all regulatory requirements. Click below to see what services we can provide!  </p></div>
       </div>
       <!--Grid column-->
       <!--Grid column-->
@@ -164,7 +157,7 @@ Our approach has been approved by regulatory by Health Canada, FDA and EMA.  The
     <div class="col-md-8 mb-4 my-5">
       <h2 class="text-start"> Clinical Pharmacology </h2>
       <div class="service pt-3"> 
-        <p>How much data we have, how we can give low doses and get good PK. PP-PD modeling, Phoenix WinNonlin, NLME, NONMEMScientific Affairs overviewAs a client you have open access to consultation with our scientific affairs team for planning, technical support and our unique insight. Our team is prepared to work closely with you during protocol & Informed Consent development and finalization right though to issuance of your final report (or CSR). We will provide our scientific expertise and make suggestions for your considerations so that you can obtain the optimal study protocol to balance the chance of success while respecting your R&D budgets. Comprehensive support to help navigate from pre-clinical to regulatory submission including:Pre-IND meeting guidance and supportFull Clinical Data Management to cover entire program.</p></div>
+        <p>Our team of clinical pharmacologists can help you in all aspects of your clinical drug development program. Our background encompasses pharmacology, pharmacokinetics, physical pharmacy, molecular pharmacology and more.  Click below to see what specific services we can help in order to help you achieve success with your drug development program. </p></div>
       </div>
     </div>
   </div>
