--- a/clinical.html
+++ b/clinical.html
@@ -115,7 +115,7 @@
       <h2 class="text-start"> Expertise</h2>
       <div class="service pt-3"> 
         <p> <!-- <iframe src="file.html"frameborder="0" height="100%" width="100%"></iframe> -->
-          Expertise New Chemical Entities (NCEs) / New Therapeutic Entities (NTEs), hybrid submissions (505b2 and Value Added Medicine) and generic submissions for global jurisdictions. We have experience with various dosage forms in single dose and multiple dose drug administration regimens. (MAYBE THIS PARAGRAPH CAN GO SOMEWHERE ELSE).</p>
+          We have hands on experience with various dosage forms in single dose and multiple dose drug administration regimens with all possible designs (crossover, partial replicate, semi-replicate, full replicate). Bullet point for:Fasting, fed (high-fat, low-fat), sprinkle. Bullet point: Studies with intensive sampling, long washout. Bullet point: Special populations Bullet point: Multiple dose studies with consecutive dosing up to 15 days. Bullet point: First in human studies Bullet point: Proof of concept studies. Bullet point: Topical formluations, transdermal patches - Adhesion, Sensitization, Irritation. </p>
       </div>
       <div class="text-start pt-4"><a href="clinical-expertise.html" class="btn btn-success" >Learn More</a> </div>
     </div>
@@ -134,8 +134,7 @@
       <h2 class="text-start"> Subject Selection </h2>
       <div class="service pt-3"> 
         <p> <!-- <iframe src="Subjectselection.html" frameborder="0" height="100%" width="100%"></iframe> -->
-
-          Full panel all the time! From healthy volunteer subjects, special populations such as pre or post menopausal women or patients we are here for you. Being located in the Greater Toronto Area, gives us access to a diverse population which is what Regulators look for in clinical trials. We draw from our active database which boasts over X volunteers in addition to reaching out by various advertising medians. We also have a very effective referral program - participants love the safe and comfortable environment offered at PMRI and spread the word.  </p></div>
+          We have a dedicated call center and recruiters. From a large database of healthy volunteers to special populations such as post-menopausal women, we’ve got you covered! Being located in the Greater Toronto Area, gives us access to a diverse population which is what Regulators look for in clinical trials. We draw from our active database which boasts over X volunteers in addition to reaching out by various advertising medians. We also have a very effective referral program - participants love the safe and comfortable environment offered at PMRI and spread the word.  </p></div>
       </div>
       <!--Grid column-->
       <!--Grid column-->
