--- a/aboutus.html
+++ b/aboutus.html
@@ -96,7 +96,7 @@
     <div class="row g-0">
       <div class="col-md-6">
         <h1 class="card-title text-center m-3">Who We Are</h1>
-        <p class="card-text m-3">People make the difference and are operated by a passionate and involved leadership team. We truly believe that our success depends on the team of honest, hard working and passionate people who have substantial hands on experience developing processes and executing the procedures. Over the last 25+ years we've invested more into hiring the best scientists, clinicians and professionals, leading to an efficient organization with over 250 employees all striving to reach the common innovating in our space.</p>
+        <p class="card-text m-3">PMRI was founded in Toronto, Canada in 1997 and is a privately held CRO. We are management owned and operated by a very hands-on, scientific, and involved leadership team. We are a full-service CRO focused on early phase clinical trials and have routinely and successfully been audited by regulatory agencies around the world. We truly believe that people make the difference and that our success depends on the team of honest, hardworking, and passionate people who have substantial hands-on experience developing processes and executing the procedures. </p>
         
       </div>
       <div class="col-md-6">
