--- a/bioanalytical.html
+++ b/bioanalytical.html
@@ -205,7 +205,7 @@ Extraction and analysis of products in for in-vitro studies (saline, human tissu
 		<div class="col-md-8 mb-4 my-5">
 			<h2 class="text-start"> Biorepository</h2>
 			<div class="service pt-3"> 
-				<p>Our sample assession team is dedicted and responsible for handling and recording all samples from X to X.Our bi-fueled backup generator will ensure that the power is uninteruped in the event of a failure.” “Number of freezers or backup generate to maintain the stability or integrity. If this is not maintained the reprocusions.mention -25 and -80?restricted areainventory electroanically captured via custom validated applications.Temperature monitoringDedicated teamsCentral monitoringBackup generatorDual compressor freezers24/7 sample deposit & withdrawal (library system)” </p>
+				<p>Our sample assession team is dedicted and responsible for handling and recording all samples from X to X.Our bi-fueled backup generator will ensure that the power is uninteruped in the event of a failure.” “Number of freezers or backup generate to maintain the stability or integrity. If this is not maintained the reprocusions.mention -25 and -80?restricted areainventory electroanically captured via custom validated applications.Temperature monitoringDedicated teamsCentral monitoringBackup generatorDual compressor freezers24/7 sample deposit & withdrawal (library system) </p>
 			</div>
 		</div>
 		<!--Grid column-->
