--- a/clinical-expertise.html
+++ b/clinical-expertise.html
@@ -116,7 +116,7 @@
       <h2 class="text-start">BE/BA</h2>
 
       <div class="service pt-3"> 
-        <p>We know that in order to show that two drugs are bioequivalent, we need to prove there is no clinically significant difference in their bioavailability so standardizing the conduct is key. Intra and Inter subject variability is the basic concept and this is our focus to increase the probability of success. Having 360 beds under one roof allows us to not only dose very large groups and closer together to decrease “group effects” but also offer long confinement for months when necessary.</p></div>
+        <p>Standardizing study conduct to reduce the potential of variability is key.  Having 360 beds at are large clinic site allows us to perform very large-scale trials with smaller intervals between groups dosings, decreasing the duration of your trial.  This set up also offers is conducive for long confinement studies where the duration is weeks and even months long.  Our operation is scalable and adaptable to fit the needs of your studies.</p></div>
       </div>
 
       <!--<div id="info">  
@@ -140,7 +140,7 @@
     <div class="col-md-8 mb-4 my-5">
       <h2 class="text-start"> PK/PD</h2>
       <div class="service pt-3"> 
-        <p>Full panel all the time! From healthy volunteer subjects, special populations such as pre or post menopausal women or patients we are here for you. Being located in the Greater Toronto Area, gives us access to a diverse population which is what Regulators look for in clinical trials. We draw from our active database which boasts over X volunteers in addition to reaching out by various advertising medians. We also have a very effective referral program - participants love the safe and comfortable environment offered at PMRI and spread the word. We are also enrolled in clinical RSVP which securely and confidentially validates subjects eligibility prior to enrollment by using biometrics. The goal is prevent dual enrollment which leads to increased accuracy of clinical study data and improves the participant’s safety.</p></div>
+        <p>There are so many objectives and endpoints that can be the desired outcome.  We can help achieve them. Whether it’s for a clinical endpoint, First-In-Human (FIH), Single Ascending Dose (SAD), Multiple-Ascending Dose (MAD), safety & tolerability, adhesion/irritation, Drug-Drug Interaction (DDI), bridging, dose proportionality it does not matter. We get it done for you!</p></div>
       </div>
       <!--Grid column-->
       <!--Grid column-->
@@ -167,7 +167,8 @@
         <h2 class="text-start"> Specialized Studies </h2>
 
         <div class="service pt-3"> 
-          <p>“Contamination! To us clinical trials are very routine and with all studies we ensure that measures are in place to address factors which may jeopardize the outcome. Our experiences goes way beyond the standard solid oral dosage form and includes but not limited to solutions, films, injectable products, ophthalmic, vaginal and rectal administration. But there are a few others with very specific considerations which are drug products for respiratory and topical. Metered Dose Inhalers (MDI), Dry Powder Inhalers (DPI), Nasal Sprays, Nebulizers, Patches, Ointments and Creams are special. Through our experience we have identified what challenges can arise and have implemented special considerations, specifically to address the high risk of potential contamination as well to address the issue of low systemic absorption. Our expertise, experience, thorough procedures, staff training and infrastructure are key factors to the success the studies we conduct. Our process are proven effective!</p>
+          <p>To us clinical trials are very routine and with all studies we ensure that robust measures are in place to address factors which may jeopardize the outcome. Our experience goes way beyond the standard solid oral dosage form and includes but not limited to solutions, films, injectable products, ophthalmic, vaginal, and rectal administration. 
+In the area of respiratory and topical formulations, there are very specific considerations that must be made for these products. Metered Dose Inhalers (MDI), Dry Powder Inhalers (DPI), Nasal Sprays, Nebulizers, Patches, Ointments and Creams are all special with their own unique challenges. Through our experience, we have identified what these challenges are and have implemented special plans and procedures to specifically address the high-risk potential for contamination as well as address the issue of low systemic absorption. Our expertise, experience, thorough procedures, established inhalation team of PMRI staff, training modules and infrastructure are key factors to the success of the studies we conduct.</p>
         </div>
       </div>
       <!--Grid column-->
