--- a/newsrapors.html
+++ b/newsrapors.html
@@ -85,6 +85,20 @@
 
 <img src="img/News/News.png" class="img-fluid" alt="Banner">
 
+<!-- back to resources -->
+<div class="container pt-5">
+  <div>
+
+    <i class="fa fa-arrow-left"><a href="PMRInews.html" class="btn" style="color: #004f16" > BACK TO RESOURCES </i></a>
+  
+   </div>  
+
+
+
+</div>
+
+
+
 
 <div class="container">
     <!--Grid row-->
