--- a/volunteer.html
+++ b/volunteer.html
@@ -244,7 +244,7 @@
     <h2>Who we are</h2>
     <div class="text-container">
         <p>
-         We are a Contract Research Organization (CRO) and work with clinical trial Sponsors from around the world.    We have been operating in Scarborough since 1997 and are established within our community.  Our focus is your health and safety, and our highly trained and qualified staff will be with you every step of the way.  Our state-of-the-art facility offers a comfortable environment with great amenities. <a href="#">Check us out. </a>
+         We are a Contract Research Organization (CRO) and work with clinical trial Sponsors from around the world.    We have been operating in Scarborough since 1997 and are established within our community.  Our focus is your health and safety, and our highly trained and qualified staff will be with you every step of the way.  Our state-of-the-art facility offers a comfortable environment with great amenities. <br><br> <a href="https://www.pharmamedica.com/tor/studies/" class="btn btn-success">Check out Current Study </a>
         </p></div>
       </div>
     <div class="col-md-3 px-5">
@@ -287,7 +287,7 @@
     <h2>Privacy</h2>
     <div class="text-container">
         <p>
-         We are a Contract Research Organization (CRO) and work with clinical trial Sponsors from around the world.    We have been operating in Scarborough since 1997 and are established within our community.  Our focus is your health and safety, and our highly trained and qualified staff will be with you every step of the way.  Our state-of-the-art facility offers a comfortable environment with great amenities. <a href="#">Check us out. </a>
+         At PMRI, your Privacy is important to us. As part of our commitment to protecting your Privacy, we have adopted this online Privacy Statement ("Privacy Statement"), which explains PMRI's Personal Information Privacy practices related to the Website. We also have a separate Privacy Statement that addresses Personal Information that may be collected in the course of clinical trials and other business activities. Please refer to that policy before disclosing Personal Information in connection with such services. <a href="https://www.pharmamedica.com/privacy/" style="color:#C2A35E; text-decoration: none; font-size: 18px;">Read More. </a>
         </p></div>
       </div>
     <div class="col-md-3 px-5">
@@ -425,7 +425,6 @@
 <div class="container py-4">
 
  <form>
-  
     <div class="mb-3">
       <label for="validationDefault01">First name</label>
       <input type="text" class="form-control" id="validationDefault01" placeholder="First name" value required>
@@ -449,7 +448,7 @@
  </p>
 
     <div class="text-center mb-3">
-      <button class="btn btn-success btn-lg" type="submit">Send Message</button>
+      <button class="btn btn-success btn-lg" type="submit" value="Subscribe">Send Message</button>
    </div>
   </form>
   </div> 
@@ -512,7 +511,7 @@
 
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
               <h6 class="text-uppercase mb-4 font-weight-bold">Head Office</h6>
-              <p>1600 Belgrave Rd</p>
+              <p>6100 Belgrave Rd</p>
               <p>Mississauga, ON</p>
               <p>L5R 0B7</p>
             </div>
@@ -579,7 +578,6 @@
   </div>
 </div> -->
  
-
       <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
       <script type="text/javascript" src="js/bootstrap.min.js"></script>
       <script type="text/javascript" src="js/main.js"></script>
